--- a/CSS/style.css
+++ b/CSS/style.css
@@ -51,8 +51,10 @@ h5 {
 }
 
 img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     width: 100px;
-    margin-left: 455px;
 }
 
 button {
